--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 jdbc.url=jdbc:mysql://127.0.0.1/monitor?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=1123
 jdbc.minPoolSize=5
 jdbc.maxPoolSize=20
 jdbc.maxWait=60000
