--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.derbysoft.content.monitor</groupId>
-    <artifactId>Content-Monitor</artifactId>
+    <artifactId>CSMonitor</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Content-Monitor Maven Webapp</name>
+    <name>CSMonitor Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -130,7 +130,21 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>Content-Monitor</finalName>
+        <finalName>CSMonitor</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
